integration_tests/codegen_fail/fail/union/trait_fail_infer_context.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error[E0277]: the trait bound `CustomContext: FromContext<SubContext>` is not satisfied
 --> $DIR/trait_fail_infer_context.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^ expected an implementor of trait `FromContext<SubContext>`
  |
  = note: required by `juniper::FromContext::from`
  = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> $DIR/trait_fail_infer_context.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^ expected struct `CustomContext`, found struct `SubContext`
  |
  = note: expected reference `&CustomContext`
             found reference `&SubContext`
  = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)
